WIAPASCAL CHANGE LOG
======================

2024/10/04 TWIADevice GetProperty, SetProperty with Formal Type

2024/09/27 Use of Formal Types for TWIADevice.SetProperty/GetProperty
        24 Added TWIAPropertyFlags and WIAPropertyFlags function
	13 Demo List Properties Flags and Vector Values
        06 Added SelectedProperties and RootProperties; 
	   Added SetProperty; 
	   First Download Test with dpi;

2024/09/04 Added Path\FileName and Multiple Pages files to Download; 
	   SelectItem use Internal array intestead of Wia FindItemByName; 
	   Added OnDeviceTransfer Events; 
	   Added Events and Select of Download from Item in Demo;
           Delphi Compatibility of Package\Demo;

2024/08/22 renamed TWIADevice.GetWiaDevice to GetWiaRootItem; 
	   Download witch callback Test; 
	   subChilds Names in demo; 

2024/08/20 Added SelectDeviceDialog; Added in demo List Childs and SelectDeviceDialog
2024/08/19 Porting to Delphi
2024/06/05 Added TWIADevice.GetWiaDevice (Create the Device); 
           Added WIA property LIST container MACROS to SDK files; 
           Demo List some Capabilities;
2024/06/04 Renamed Component to Manager, Source to Device; Updated EnumerateDevices; Added FindDevice; 
           Demo uses WIAManager
2024/06/03 Added StiDeviceType to WiaDef; First write of Wia Component
2024/04/05 MaxM - Initial Translation of Windows SDK files (must be completed), TLB Import 